2010-09-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* lwlib.h (lw_register_widget, lw_create_widget):
	* lwlib.c (allocate_widget_info, lw_register_widget)
	(lw_create_widget, separator_table): Use const.

2010-07-29  Dan Nicolaescu  <dann@ics.uci.edu>

	* xlwmenu.c (abort_gracefully): Mark as NO_RETURN.

2010-07-26  Dan Nicolaescu  <dann@ics.uci.edu>

	* xlwmenu.h (xlwmenu_window_p, xlwmenu_redisplay): Add declarations.

2010-07-12  Andreas Schwab  <schwab@linux-m68k.org>

	* Makefile.in (C_WARNINGS_SWITCH, PROFILING_CFLAGS): Set from
	substitution.
	(ALL_CFLAGS): Add ${C_WARNINGS_SWITCH} and ${PROFILING_CFLAGS}.

2010-07-08  Jan Djärv  <jan.h.d@swipnet.se>

	* xlwmenu.c (size_menu_item): Change from K&R to prototype.
	Change label_width and height to int.
	(draw_arrow, draw_shadow_rectangle, draw_shadow_rhombus)
	(draw_separator, display_menu, fit_to_screen, motion_event_is_in_menu)
	(map_event_to_widget_value): Reformat.
	(display_menu_item): Change from K&R to prototype.

	* lwlib.c (allocate_widget_info, lw_register_widget): Change from K&R
	to prototype.
	(lw_internal_update_other_instances, merge_widget_value): Reformat.

	* lwlib-int.h (widget_creation_function): Fix prototype.

	* lwlib-Xm.c (x_print_complete_resource_name)
	(make_destroyed_instance, free_destroyed_instance, first_child)
	(lw_motif_widget_p, resource_motif_string, destroy_all_children)
	(xm_arm_callback, xm_update_label, xm_update_list)
	(xm_update_pushbutton, xm_update_cascadebutton)
	(xm_update_toggle, xm_update_radiobox, make_menu_in_widget)
	(update_one_menu_entry, xm_update_menu, xm_update_text)
	(xm_update_text_field, xm_update_one_widget)
	(xm_update_one_value, activate_button, dialog_key_cb)
	(make_dialog, mark_dead_instance_destroyed)
	(find_matching_instance, recenter_widget, recycle_instance)
	(xm_create_dialog, make_menubar, remove_grabs, make_popup_menu)
	(make_main, xm_destroy_instance, xm_popup_menu)
	(set_min_dialog_size, xm_pop_instance, do_call)